--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "expo-secure-store": "~14.0.1",
     "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.22",
+    "expo-sqlite": "^15.2.12",
     "expo-status-bar": "~2.0.1",
     "expo-store-review": "~8.0.1",
     "expo-symbols": "~0.2.2",
@@ -54,6 +55,7 @@
     "expo-web-browser": "~14.0.2",
     "firebase": "^9.23.0",
     "jest-expo": "~52.0.5",
+    "mixpanel-react-native": "^3.1.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
